--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.fxmisc.flowless</groupId>
     <artifactId>flowless</artifactId>
-    <version>0.6.4-TC1</version>
+    <version>0.6.10-TC1</version>
 
     <build>
         <plugins>
@@ -15,8 +15,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
@@ -29,6 +29,11 @@
             <groupId>org.reactfx</groupId>
             <artifactId>reactfx</artifactId>
             <version>2.0-M5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>18.0.2</version>
         </dependency>
 
         <dependency>
